Error Mitigation/MagiCoder/Data/javax_xml_ws_spi_http/javax_xml_ws_spi_httpOutputResult.txt
Sample: HttpExchange_3
----------------------------------------------------------------
output:
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_3.java:7: error: illegal start of expression
        HttpExchange exchange =...;
                               ^
1 error


================================================================

Sample: HttpExchange_5
----------------------------------------------------------------
output:
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_5.java:1: error: package javax.xml.ws.spi.http does not exist
import javax.xml.ws.spi.http.HttpExchange;
                            ^
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_5.java:7: error: cannot find symbol
        HttpExchange httpExchange = new HttpExchange() {
        ^
  symbol:   class HttpExchange
  location: class HttpExchange_5
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_5.java:7: error: cannot find symbol
        HttpExchange httpExchange = new HttpExchange() {
                                        ^
  symbol:   class HttpExchange
  location: class HttpExchange_5
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_5.java:8: error: method does not override or implement a method from a supertype
            @Override
            ^
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_5.java:13: error: method does not override or implement a method from a supertype
            @Override
            ^
./Data/javax_xml_ws_spi_http/javaFiles/HttpExchange_5.java:18: error: method does not override or implement a method from a supertype
            @Override
            ^
6 errors


================================================================

